SalesForceAssignment/Assignment_7/src/objects/PurchaseOrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ESmartPack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ESmartPack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>PurchaseOrder</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>UnitPrice__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PurchaseOrderLineItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PurchaseOrderLineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>